--- a/StormViewer/Base.lproj/Main.storyboard
+++ b/StormViewer/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,15 +18,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Picture" textLabel="1LN-2K-vAo" style="IBUITableViewCellStyleDefault" id="9FT-3Q-QLg">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Picture" textLabel="1LN-2K-vAo" style="IBUITableViewCellStyleDefault" id="9FT-3Q-QLg">
                                 <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9FT-3Q-QLg" id="JRW-Le-6ua">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="286" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1LN-2K-vAo">
-                                            <rect key="frame" x="16" y="0.0" width="288" height="43.5"/>
+                                            <rect key="frame" x="16" y="0.0" width="269" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -62,12 +61,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="YWC-b2-Wdi" firstAttribute="bottom" secondItem="xyt-2M-QJA" secondAttribute="bottom" id="Dvl-5T-vLe"/>
+                            <constraint firstItem="YWC-b2-Wdi" firstAttribute="bottom" secondItem="pZP-jM-0lw" secondAttribute="bottom" id="Dvl-5T-vLe"/>
                             <constraint firstItem="YWC-b2-Wdi" firstAttribute="leading" secondItem="pZP-jM-0lw" secondAttribute="leading" id="hHs-n9-1mi"/>
                             <constraint firstItem="YWC-b2-Wdi" firstAttribute="top" secondItem="pZP-jM-0lw" secondAttribute="top" id="sye-H2-o6V"/>
                             <constraint firstAttribute="trailing" secondItem="YWC-b2-Wdi" secondAttribute="trailing" id="tj8-54-YYP"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="xyt-2M-QJA"/>
                     </view>
                     <connections>
                         <outlet property="imageView" destination="YWC-b2-Wdi" id="dVO-dr-2KL"/>
